WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192135
[LFC][BFC][Quirk] Width does not need stretching quirk.
https://bugs.webkit.org/show_bug.cgi?id=192135
Summary
[LFC][BFC][Quirk] Width does not need stretching quirk.
alan
Reported
2018-11-28 21:23:43 PST
since width always stretches in BFC.
Attachments
Patch
(5.87 KB, patch)
2018-11-28 21:26 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-11-28 21:26:01 PST
Created
attachment 355974
[details]
Patch
alan
Comment 2
2018-11-29 07:30:35 PST
Committed
r238668
: <
https://trac.webkit.org/changeset/238668
>
Radar WebKit Bug Importer
Comment 3
2018-11-29 07:31:32 PST
<
rdar://problem/46341842
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug