Source/WebCore/layout/blockformatting/BlockFormattingContext.h
@@ -112,9 +112,9 @@ private:
 
     class Quirks {
     public:
-        static bool isStretchedToInitialContainingBlock(const LayoutState&, const Box&);
+        static bool needsStretching(const LayoutState&, const Box&);
         static HeightAndMargin stretchedHeight(const LayoutState&, const Box&, HeightAndMargin);
-        static WidthAndMargin stretchedWidth(const LayoutState&, const Box&, WidthAndMargin);
+
         static bool shouldIgnoreMarginTop(const LayoutState&, const Box&);
     };
 };
